refactor instrumentation analyzer